--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
+
 <!DOCTYPE html>
-<html lang="es">
+<html lang="da">
 <head>
 <script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "stronger100", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Mi catálogo de fotos</title>
+<title>Min foto katalog</title>
 <meta content='https://i.postimg.cc/KjzxqTLS/Screenshot-5.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
@@ -14,7 +15,7 @@
 <script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
 <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
-<title>Galería de fotos</title>
+<title>Fotogalleri</title>
 <div class="layer">
 </div>
 <div class="wrap">
@@ -24,26 +25,26 @@
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title">
-Venimos a tu casa por la noche, servicio disponible en toda la ciudad, ¿te gustaría ver mi catálogo?
+Vi kommer til dig om natten, tjenesten er tilgængelig i hele byen, vil du gerne se mit katalog?
 </div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
-Sí
+Ja
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-No
+Nej
 </div>
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title">
-¡ATENCIÓN! ¿Aceptas respetar a las mujeres que ves a continuación? Si conoces a alguien, no digas nada ni difundas rumores</div>
+ADVARSEL! Accepterer du at respektere kvinderne, du ser nedenfor? Hvis du kender nogen, skal du ikke sige noget og sprede rygter</div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://singleswantdates.com/tds/ae?tdsId=s6982pos_r&tds_campaign=s6982pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d8a90aeb&subid={Stronger}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">ESTOY DE ACUERDO
+<a href="https://singleswantdates.com/tds/ae?tdsId=s6982pos_r&tds_campaign=s6982pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d8a90aeb&subid={Stronger}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">JEG ER ENIG
 </a>
 </div>
 </div>
